Update web.html with msg for propose day

--- a/web.html
+++ b/web.html
@@ -264,7 +264,7 @@
             {
                 date: '2025-02-08',
                 day: 'Propose Day',
-                message: "Every moment with you feels like falling in love all over again.",
+                message: "Jeevithakalam motham ooru thendanum, nattapathirak eppo thonyalum night ride pidikanum, vellam adikan thonnumbo nalla onnanthram kuppim edth vannu oppam vannu irunnu enna chetayi ozhiken pryanum, thulavarsharathrikalil oru puthapinadiyil snehikanum ENIKORU PENNINE VENAM… (pinne kore ind athokke ippo ang prnj theertha engana) Porunno ente koode😉",
                 image: "proposeday.jpg"
             },
             {
