--- a/web.html
+++ b/web.html
@@ -270,7 +270,7 @@
             {
                 date: '2025-02-09',
                 day: 'Chocolate Day',
-                message: "Sweet like chocolate, pure like your heart - you're everything I've ever wanted.",
+                message: "Entha avesham….........Samayaytilla 😌 Wait madu maka........Edak edak vannu nokikoo vellom indenkiloo😛",
                 image: "chocolateday.jpg"
             },
             {
