--- a/web.html
+++ b/web.html
@@ -270,7 +270,7 @@
             {
                 date: '2025-02-09',
                 day: 'Chocolate Day',
-                message: "Entha avesham….........Samayaytilla 😌 Wait madu maka........Edak edak vannu nokikoo vellom indenkiloo😛",
+                message: "Dannyde pocketil kai itt nok. Avante hotdog onnum parachond poyekkal😛",
                 image: "chocolateday.jpg"
             },
             {
