--- a/web.html
+++ b/web.html
@@ -262,21 +262,21 @@
                 image: "roseday.jpg"
             },
             {
-                date: '2025-02-08',
+                date: '2025-02-05',
                 day: 'Propose Day',
-                message: "Jeevithakalam motham ooru thendanum, nattapathirak eppo thonyalum night ride pidikanum, vellam adikan thonnumbo nalla onnanthram kuppim edth vannu oppam vannu irunnu enna chetayi ozhiken pryanum, thulavarsharathrikalil oru puthapinadiyil snehikanum ENIKORU PENNINE VENAM… (pinne kore ind athokke ippo ang prnj theertha engana) Porunno ente koode😉",
+                message: "Jeevithakalam motham ooru thendanum, nattapathirak eppo thonyalum night ride pidikanum, vellam adikan thonnumbo nalla onnanthram kuppim edth vannu oppam vannu irunnu enna chetayi ozhiken pryanum, thulavarsharathrikalil oru puthapinadiyil snehikanum ENIKORU PENNINE VENAM…(pinne kore ind athokke ippo ang prnj theertha engana)... Porunno ente koode😉",
                 image: "proposeday.jpg"
             },
             {
-                date: '2025-02-09',
+                date: '2025-02-08',
                 day: 'Chocolate Day',
-                message: "Aksenodum soosanodum poi kenji nokk vellom kityaloo😛",
+                message: "Entha avesham…....Samayaytilla 😌 Wait madu maka.......Edak edak vannu nokikoo vellom indenkiloo😛",
                 image: "chocolateday.jpg"
             },
             {
                 date: '2025-02-10',
                 day: 'Teddy Day',
-                message: "Just like a teddy bear brings comfort and joy, you bring warmth to my life.",
+                message: "Teddy bearne patti aloikumbo ni ingane manasil varum, aah teddy bearenganum ivde indarnne njn veed oru zoo akamarnnu😂😌.......Just like a teddy bear, you bring so much warmth, comfort, and happiness. Every moment with you feels like a hug that I never want to let go of. I'm so grateful for you.     Pungumanine vellunna teddyne onnum ith vare kand kitathond pretheekshayode kathirikandatoo😂😂♥️",
                 image: "teddy.jpg"
             },
             {
