--- a/web.html
+++ b/web.html
@@ -282,7 +282,7 @@
             {
                 date: '2025-02-11',
                 day: 'Promise Day',
-                message: "Whatever shit happens, even lokathinte eeth moolak aahnelum I ll be there for you and i promise that i ll stay the same and i ll make sure that we stay the same 🫂♥️ upgradation aayikoodannila bhaviyil",
+                message: "Whatever shit happens, even lokathinte eeth moolak aahnelum I ll be there for you and i promise that i ll stay the same and i ll make sure that we stay the same 🫂♥️ upgradation aayikoodannila bhaviyil😌........Eth mood 😎.........Nammade mood 🤜🏻🤛🏻",
                 image: "promise.jpg"
             },
             {
