--- a/web.html
+++ b/web.html
@@ -288,7 +288,7 @@
             {
                 date: '2025-02-12',
                 day: 'Hug Day',
-                message: "Your hugs are my safe haven, where all my worries melt away.",
+                message: "Order Details:\n\nAddress:  \n\nMariya T Thomas \nAmity University Gurgaon, Manesar, Panchgaon  \nPanchgaon, Manesar  \nMANESAR, HARYANA 122413  \nIndia  \n\nPhone number: ‪‬  8848233045‬\n\nYour special order: A big serving of warm, cozy hugs, paired with a delicious side of sweet kisses, all sprinkled with extra love on top! ♥️\n\nOrder Status : Waiting for Mariya T Thomas to confirm.",
                 image: "hug.jpg"
             },
             {
