--- a/web.html
+++ b/web.html
@@ -294,7 +294,7 @@
             {
                 date: '2025-02-13',
                 day: 'Kiss Day',
-                message: "Every kiss with you feels like our first - magical and passionate.",
+                message: "Order is still waiting for confirmation!!!! Kiss dayokke veno ente mariyammak oru umma theran. Ennu thannalum nink feel kitullaloo🙂‍↔️ Athond order accept cheytha hugum feelum kissum ellam orumich verum combo offeraaa😌.....Ennatum feel kitileee. Ninte feelinte sunapi adich poinnu kootikoo😂😂♥️......Mmuuuuahhhhhhhh♥️♥️ Chuckabooo♥️",
                 image: "kiss.jpg"
             },
             {
