--- a/web.html
+++ b/web.html
@@ -234,7 +234,7 @@
     </div>
 
     <script>
-        let audio = new Audio("https://github.com/X-tremeCoder/valentines/blob/main/audio.mp3");
+        let audio = new Audio("https://raw.githubusercontent.com/X-tremeCoder/valentines/main/audio.mp3");
         audio.volume = 0.05;
         audio.play();
 
