--- a/web.html
+++ b/web.html
@@ -234,7 +234,7 @@
     </div>
 
     <script>
-        let audio = new Audio("https://raw.githubusercontent.com/X-tremeCoder/valentines/main/audio.mp3");
+        let audio = new Audio("https://drive.google.com/uc?export=download&id=1Z4eTypqpyhP-FgyhTHk7iWs49NXGYUps");
         audio.volume = 0.5;
         audio.play();
 
