--- a/web.html
+++ b/web.html
@@ -300,13 +300,13 @@
             {
                 date: '2025-02-13',
                 day: 'Kiss Day',
-                message: "Every kiss with you feels like our first - magical and passionate.",
+                message: "Order is still waiting for confirmation!!!!.....Kiss dayokke veno ente mariyammak oru umma theran. Ennu thannalum nink feel kitullaloo🙂‍↔️ Athond order accept cheytha hugum feelum kissum ellam orumich verum combo offeraaa😌.......Ennatum feel kitileee. Ninte feelinte sunapi adich poinnu kootikoo😂😂♥️......Mmuuuuahhhhhhhh♥️♥️ Chuckabooo♥️",
                 image: "kiss.jpg"
             },
             {
                 date: '2025-02-14',
                 day: "Valentine's Day",
-                message: "You're my soulmate, my best friend, and my greatest blessing.",
+                message: "Njan ippo prethyekich enna pryana uk every stuff 😂😂 njn sathyam prnja didnt had any plan of making this n all. Pinne ellam oru otta mind aarnnu. Anyways ik that u knew before whatever i confessed, u made me confess😂 Ni poliya Mariyamme🫂♥️ idk what striked me when i first heard your voice while i was talking with susan and u came and told mood poi ok seri bye😂 Anne manaslaytha ee kurup oru khilladi kazhiveri aahnen. But i never thought we would be this close.(who knows🌝ippo biangara busy alle🥱) Athinte edak aahnelum we always find time for each other. Mood illelum moodila pinne vilikann thorann pryan vere evde pattum😂🫂 Bakki parayan olle okke patt ket manasalikikoo(Athum cringe aahn korch ket kazhyumbo cringe pokkolum)😂 BTW amazon cartinte list enik kityilla. Ini time over thalkalam ollath kond onam aak. Will be my valentine okke cringe cleashe sanam. ........Porunno ente koode adich polich ang jeevikam🫂♥️ Aa pinne order confirm cheythillel enganum expire aayi povanum chance inde",
                 image: "valentine.jpg"
             }
         ];
