--- a/newone.html
+++ b/newone.html
@@ -255,12 +255,12 @@
 						Thank you for choosing Veloura.<br>
 						We hope our handcrafted piece brought you joy.<br>
 						We'd love to hear your thoughts.<br>
-						Enter your experience code below.
+						Enter your experience below.
 					</p>
 
 					<div class="input-section">
-						<label for="experienceCode" class="input-label">Experience Code</label>
-						<input type="text" id="experienceCode" class="experience-input" placeholder="Enter your code">
+						<label for="experienceCode" class="input-label">Review</label>
+						<input type="text" id="experienceCode" class="experience-input" placeholder="Enter your review">
 						<button onclick="submitCode()" class="submit-btn">Submit</button>
 					</div>
 				</div>
@@ -284,10 +284,10 @@
 					</div>
 
 					<div class="final-message">
-						I know things are different now.<br>
+						Sorry, I couldn’t wait till August to send this to Amity. I did my best not to leave any hint except this.<br>
 						This isn't about anything more.<br>
 						It's just a quiet reminder — you still matter.<br>
-						Happy (late) birthday, Mariya.
+						Stepping into the 20s like a boss — happy belated b’day, Bitch♥️🫂.
 						<div class="signature">— Someone who still remembers.</div>
 					</div>
 				</div>
